@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-10-08 17:38:15 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-113
+
+    Summary:
+      handlers, speed-up "Folder.copy_handler"
+    Revision:
+      itools--main--0.9--patch-113
+
+
+    modified files:
+     Changelog handlers/Folder.py
+
+
 2005-09-29 17:06:26 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-112
 
     Summary:
